# bramble

./: .buildinfo  .codecov.yml  .dockerignore  .gitignore  CITATION.cff  README.md  background.html  community_guidelines.html  examples.html  execution_model.html  gallery.html  genindex.html  index.html  installation.html  objects.inv  pattern_library.html  publications.html  search.html  searchindex.js  user_interface.html
.github/workflows/: build.yml  docker.yml  docs.yml  draft-pdf.yml  stats.yml
_sources/: background.rst.txt  examples.rst.txt  gallery.rst.txt  index.rst.txt  user_interface.rst.txt
docker/: deploy.Dockerfile
docs/: background.rst  community_guidelines.rst  conf.py  examples.rst  execution_model.rst  gallery.rst  index.rst  installation.rst  pattern_library.rst  publications.rst  user_interface.rst
docs/_templates/: breadcrumbs.html
paper/: compile.sh  paper.bib  paper.jats  paper.md
patterns/: patterns.json  patterns2.json
scripts/: README.md  similarity_plot.py
scripts/blender/: README.md  output.txt  render.blend
scripts/output/: pa_co1121.txt  pa_rh111.txt  sa_co1121.txt  sa_rh111.txt
src/: CMakeLists.txt  bramble.cpp  bramblecuda.cpp  brambletool.cpp  card_manager.cu  card_manager.h  cmake_install.cmake  cna.cpp  cna.h  cna_signature.cpp  cna_signature.h  cna_triplet.cpp  cna_triplet.h  config.h.in  geometry_reader.cpp  geometry_reader.h  isorank_analyze_cuda.h  main.cpp  math.h  metric_analyzer_cuda.cu  metric_analyzer_cuda.h  pattern.cpp  pattern.h  pattern_library.cpp  pattern_library.h  patterns.cpp  patterns.h  permutation_generator.cpp  permutation_generator.h  progress_bar.cpp  progress_bar.h  similarity_analysis.cpp  similarity_analysis.h  state.cpp  state.h
src/test/: .gitignore  CMakeLists.txt  test_basic.cpp  test_card_manager.cpp  test_cna.cpp  test_error.cpp  test_fingerprint.cpp  test_geo.cpp  test_pattern_library.cpp  test_poscar.cpp  test_similarity.cpp  test_xyz.cpp
src/test/data/: POSCAR  POSCAR_Co1121  POSCAR_Rh111  co_np.geo  co_np.xyz  co_np_25.geo  mat1.txt  mat2.txt
